--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99f37e">  <td>17/11/20 16:47:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyTitle.close()[pri:0, instance:VerifyTitle@39c0f4a]">&lt;&lt;close</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>17/11/20 16:47:27</td>   <td>-11322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.test_01()[pri:0, instance:VerifyTitle@39c0f4a]">test_01</td> 
-  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>17/11/20 21:04:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyTitle.close()[pri:0, instance:VerifyTitle@5622fdf]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>17/11/20 21:04:04</td>   <td>-39894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyTitle.setup()[pri:0, instance:VerifyTitle@5622fdf]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1344645519</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>17/11/20 21:04:06</td>   <td>-37514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.test_01()[pri:0, instance:VerifyTitle@5622fdf]">test_01</td> 
+  <td>main@1344645519</td>   <td></td> </tr>
 </table>
